redis/5.1/modules/ROOT/pages/redis-connector-examples.adoc
= Redis Examples - Mule 4

[[xmlsave]]
== XML Save a Key Value

. Add the Redis namespace to the Mule element:
+
[source]
----
xmlns:redis="http://www.mulesoft.org/schema/mule/redis"
----
+
. Add the location of the Redis schema referred to by the Redis namespace:
+
[source,text,linenums]
----
http://www.mulesoft.org/schema/mule/redis
http://www.mulesoft.org/schema/mule/sfdc-composite/current/mule-redis.xsd
----
+
. Add the HTTP namespace to the Mule element:
+
----
xmlns:http="http://www.mulesoft.org/schema/mule/http"
----
+
. Add the location of the HTTP schema referred to by the HTTP namespace:
+
[source,text,linenums]
----
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
----
+
. Add a `redis:config` element to your project, then configure its attributes:
+
[source,xml,linenums]
----
<redis:config name="Redis__Configuration" host="${config.host}"
 connectionTimeout="${config.connectionTimeout}" port="${config.port}"
 doc:name="Redis: Configuration"/>
----
+
. Add an `http:listener-config` element to your project, and configure its attributes:
+
[source,xml,linenums]
----
<http:listener-config name="HTTP_Listener_Configuration"
	host="0.0.0.0"
	port="8081"
	doc:name="HTTP Listener Configuration"/>
----
+
. Add an empty flow element to your project:
+
[source,xml,linenums]
----
<flow name="set-flow">
</flow>
----
+
. Within the flow element, add an `http:listener` element:
+
[source,xml,linenums]
----
<http:listener config-ref="HTTP_Listener_Configuration"
	path="/"
	doc:name="Set value HTTP endpoint"/>
----
+
. Within the flow element, add `redis:set` after the `http:listener`:
+
[source,xml,linenums]
----
<redis:set config-ref="Redis__Configuration"
	key="#[payload.key]"
	value="#[payload.value]"
	doc:name="Set value for key into Redis"/>
----
+
. Within the flow element, add a `set-payload` element after `redis:set`:
+
[source,xml]
----
<set-payload value="Value successfully set" doc:name="Set value response"/>
----
+
. When you're done, the XML file should look like:
+
[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:redis="http://www.mulesoft.org/schema/mule/redis"
	xmlns:tracking="http://www.mulesoft.org/schema/mule/ee/tracking"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:spring="http://www.springframework.org/schema/beans"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://www.springframework.org/schema/beans
	http://www.springframework.org/schema/beans/spring-beans-current.xsd
	http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
	http://www.mulesoft.org/schema/mule/ee/tracking
	http://www.mulesoft.org/schema/mule/ee/tracking/current/mule-tracking-ee.xsd
	http://www.mulesoft.org/schema/mule/redis
	http://www.mulesoft.org/schema/mule/redis/current/mule-redis.xsd">
    <redis:config
    	name="Redis__Configuration"
	    host="${config.host}"
	    connectionTimeout="${config.connectionTimeout}"
	    port="${config.port}"
	    doc:name="Redis: Configuration"/>
    <http:listener-config
    	name="HTTP_Listener_Configuration"
	    host="0.0.0.0"
	    port="8081" doc:name="HTTP Listener Configuration"/>
    <flow name="set-flow">
        <http:listener
	        config-ref="HTTP_Listener_Configuration"
	        path="/"
	        doc:name="Set value HTTP endpoint"/>
        <redis:set
	        config-ref="Redis__Configuration"
	        key="#[payload.key]"
	        value="#[payload.value]"
        doc:name="Set value for key into Redis"/>
        <set-payload
         value="Successfully set value: #[payload.value] to key: #[payload.key]"
         doc:name="Set value response"/>
    </flow>
</mule>
----

[[xmlobjectstore]]
== XML Custom Object Store

This use case describes how to use the Redis Connector as a custom object store in a Mule app.

. Add the Redis namespace to the Mule element:
+
[source]
----
xmlns:redis="http://www.mulesoft.org/schema/mule/redis"
----
+
. Add the location of the Redis schema referred to by the Redis namespace:
+
[source,text,linenums]
----
http://www.mulesoft.org/schema/mule/redis
http://www.mulesoft.org/schema/mule/sfdc-composite/current/mule-redis.xsd
----
+
. Add the HTTP namespace to the Mule element:
+
[source]
----
xmlns:http="http://www.mulesoft.org/schema/mule/http"
----
+
. Add the location of the HTTP schema referred to by the HTTP namespace:
+
[source,text,linenums]
----
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
----
+
. Add the object store namespace to the Mule element:
+
[source]
----
xmlns:os="http://www.mulesoft.org/schema/mule/os"
----
+
. Add the location of the object store schema referred to by the object store's namespace:
+
[source,text,linenums]
----
http://www.mulesoft.org/schema/mule/os
http://www.mulesoft.org/schema/mule/os/current/mule-os.xsd
----
+
. Add an `os:config` element to your project, then configure it to contain a Redis connection type (clustered or non-clustered). This is only possible in Studio and must be configured through XML (there is no support using the Studio graphic configuration).
+
[source,xml,linenums]
----
<os:config name="ObjectStore_Config">
     <redis:nonclustered-connection host="${redis.host}"/>
</os:config>
----
+
. Add an `os:object-store` element to your project and configure it to reference the previously created config.
+
[source,xml,linenums]
----
<os:object-store
	name="Object_store"
	config-ref="ObjectStore_Config"
	maxEntries="1"
	entryTtl="60"
	expirationInterval="10"
	expirationIntervalUnit="SECONDS"/>
----
+
. Add n `http:listener-config` element to your project, and configure its attributes:
+
[source,xml,linenums]
----
<http:listener-config
	name="HTTP_Listener_Configuration"
	host="0.0.0.0"
 	port="8081" doc:name="HTTP Listener Configuration"/>
----
+
. Add an empty flow element to your project:
+
[source,xml,linenums]
----
<flow name="set-flow">
</flow>
----
+
. Within the flow element, add an `http:listener` element:
+
[source,xml]
----
<http:listener config-ref="HTTP_Listener_Configuration" path="/" />
----
+
. Within the flow element, add an `os:store` after the `http:listener`, and configure it to use the previously created object store:
+
[source,xml,linenums]
----
<os:store
	key="#[attributes.queryParams.key]"
	objectStore="Object_store"
	failIfPresent="true"
	failOnNullValue="false">
	<os:value ><![CDATA[#[attributes.queryParams.value]]]></os:value>
</os:store>
----
+
. When you're done, the XML file should look like:
+
[source,xml,linenums]
----
<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
	xmlns:http="http://www.mulesoft.org/schema/mule/http"
	xmlns:os="http://www.mulesoft.org/schema/mule/os"
	xmlns:redis="http://www.mulesoft.org/schema/mule/redis"
	xmlns="http://www.mulesoft.org/schema/mule/core"
	xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="
	http://www.mulesoft.org/schema/mule/ee/core
	http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd
	http://www.mulesoft.org/schema/mule/core
	http://www.mulesoft.org/schema/mule/core/current/mule.xsd
	http://www.mulesoft.org/schema/mule/redis
	http://www.mulesoft.org/schema/mule/redis/current/mule-redis.xsd
	http://www.mulesoft.org/schema/mule/os
	http://www.mulesoft.org/schema/mule/os/current/mule-os.xsd
	http://www.mulesoft.org/schema/mule/http
	http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd">

	<http:listener-config name="HTTP_Listener_config">
		<http:listener-connection
		host="0.0.0.0"
		port="8081" />
	</http:listener-config>

	<os:object-store
		name="Object_store"
		config-ref="ObjectStore_Config"
		maxEntries="1"
		entryTtl="60"
		expirationInterval="10"
		expirationIntervalUnit="SECONDS"/>

	<os:config name="ObjectStore_Config">
        <redis:nonclustered-connection
			host="${redis.host}"/>
    	</os:config>

	<flow name="StoreFlow" >
        <http:listener
	        doc:name="Listener"
	        config-ref="HTTP_Listener_config"
			path="/store"/>
        <os:store
			doc:name="Store"
			key="#[attributes.queryParams.key]"
			objectStore="Object_store"
			failIfPresent="true"
			failOnNullValue="false">
		<os:value ><![CDATA[#[attributes.queryParams.value]]]></os:value>
	</os:store>
    	</flow>
</mule>
----

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
